--- a/style.css
+++ b/style.css
@@ -9,11 +9,7 @@
     --font-color: rgba(255, 255, 255, 0.87);
     --backColor: #242424;
 }
-/* Scrollbar */
-/* ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
-} */
+
 * {
     margin: 0;
     padding: 0;
@@ -26,7 +22,6 @@ grid-body {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 15px;
-    /*  width: 100%; */
 }
 hr {
     margin: 20px 0;
@@ -36,62 +31,69 @@ hr {
 nav-wrapper {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    & .switch {
-        position: relative;
-        display: inline-block;
-        width: 60px;
-        height: 34px;
-    }
-    & .switch input {
-        opacity: 0;
-        width: 0;
-        height: 0;
-    }
-    & .slider {
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #ccc;
-        -webkit-transition: 0.4s;
-        transition: 0.4s;
-    }
-    & .slider:before {
-        position: absolute;
-        content: "";
-        height: 26px;
-        width: 26px;
-        left: 4px;
-        bottom: 4px;
-        background-color: white;
-        -webkit-transition: 0.4s;
-        transition: 0.4s;
-    }
-    & input:checked + .slider {
-        background-color: #2196f3;
-    }
-    & input:focus + .slider {
-        box-shadow: 0 0 1px #2196f3;
-    }
-    & input:checked + .slider:before {
-        -webkit-transform: translateX(26px);
-        -ms-transform: translateX(26px);
-        transform: translateX(26px);
-    }
-    & .slider.round {
-        border-radius: 34px;
-    }
-    & .slider.round:before {
-        border-radius: 50%;
+    padding: 10px 0;
+    & right-side {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        text-align: center;
+        & .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+        & .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+        & .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            -webkit-transition: 0.4s;
+            transition: 0.4s;
+        }
+        & .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: 0.4s;
+            transition: 0.4s;
+        }
+        & input:checked + .slider {
+            background-color: #2196f3;
+        }
+        & input:focus + .slider {
+            box-shadow: 0 0 1px #2196f3;
+        }
+        & input:checked + .slider:before {
+            -webkit-transform: translateX(26px);
+            -ms-transform: translateX(26px);
+            transform: translateX(26px);
+        }
+        & .slider.round {
+            border-radius: 34px;
+        }
+        & .slider.round:before {
+            border-radius: 50%;
+        }
+        & span {
+        }
     }
 }
 
 div {
-    position:relative;
+    position: relative;
     display: flex;
     justify-content: space-between;
 }
@@ -119,7 +121,9 @@ input {
 }
 iconify-icon {
     position: absolute;
-    top:40%;    
+    top: 33%;
+    background-color: #213547;
+    padding-left: 5px;
 }
 
 select {
@@ -162,4 +166,17 @@ section {
             padding: 0 30px;
         }
     }
+}
+/* dark-mode{
+background-color: #aaa;
+} */
+::-webkit-scrollbar {
+    width: 2em;
+}
+::-webkit-scrollbar-track {
+    background-color: (--backcolor);
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #464646;
 }
